feat: Refine UI colors and bookshelf layout
Adjusted UI color palette for a warmer, more inviting aesthetic. Updated bookshelf component with reduced shelf height and adjusted floor positioning for better screen real estate utilization. Defaulted new book color to a pleasant blue.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
               sans: ['"Fredoka"', 'sans-serif'],
             },
             colors: {
-              'shelf-wood': '#d4b494',
-              'shelf-shadow': '#8c6b4a',
+              'shelf-wood': '#e6ddd5',
+              'shelf-shadow': '#c4b8ae',
               'paper': '#fdfbf7',
               'ink': '#4a4a4a',
-              'cream': '#f3e9e4',
+              'cream': '#f8f4f1',
             },
             boxShadow: {
               'book': '1px 1px 3px rgba(0,0,0,0.15), inset -1px -1px 2px rgba(0,0,0,0.05)',
@@ -38,7 +38,7 @@
     </script>
     <style>
       body {
-        background-color: #f0eadd;
+        background-color: #f4f1ea;
         color: #4a4a4a;
         font-family: 'Fredoka', sans-serif;
       }
