feat: Refine bookshelf aesthetics and AI color palette
This commit introduces several visual enhancements and improves the AI's book cataloging capabilities.

The bookshelf's wood textures have been updated to a more refined, vintage tone, enhancing the overall cozy aesthetic. Additionally, the AI's ability to suggest book cover colors has been improved by introducing a predefined palette of hex codes. The AI will now select colors exclusively from this list, ensuring a more consistent and thematically appropriate color scheme for book entries. The `AddBookModal` also defaults to the first color in this new palette.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
               sans: ['"Fredoka"', 'sans-serif'],
             },
             colors: {
-              'shelf-wood': '#e6ddd5',
-              'shelf-shadow': '#c4b8ae',
+              'shelf-wood': '#cdbba7', /* Steady Vintage Wood */
+              'shelf-shadow': '#b5a493', /* Deep Wood Shadow */
               'paper': '#fdfbf7',
               'ink': '#4a4a4a',
               'cream': '#f8f4f1',
