--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
               'paper': '#fdfbf7',
               'ink': '#4a4a4a',
               'cream': '#f8f4f1',
+              'cardboard': '#dcbfa3',
+              'cardboard-dark': '#c5a582',
             },
             boxShadow: {
               'book': '1px 1px 3px rgba(0,0,0,0.15), inset -1px -1px 2px rgba(0,0,0,0.05)',
