--- a/index.html
+++ b/index.html
@@ -1,87 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>em's bookshelf</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Fredoka:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              hand: ['"Patrick Hand"', 'cursive'],
-              sans: ['"Fredoka"', 'sans-serif'],
-            },
-            colors: {
-              'shelf-wood': '#cdbba7', /* Steady Vintage Wood */
-              'shelf-shadow': '#b5a493', /* Deep Wood Shadow */
-              'paper': '#fdfbf7',
-              'ink': '#4a4a4a',
-              'cream': '#f8f4f1',
-              'cardboard': '#dcbfa3',
-              'cardboard-dark': '#c5a582',
-            },
-            boxShadow: {
-              'book': '1px 1px 3px rgba(0,0,0,0.15), inset -1px -1px 2px rgba(0,0,0,0.05)',
-              'book-hover': '0px 10px 20px rgba(0,0,0,0.1)',
-              'soft': '0 4px 20px rgba(0,0,0,0.05)',
-              'inner-spine': 'inset 10px 0 20px rgba(0,0,0,0.1)',
-            },
-            backgroundImage: {
-              'noise': "url('data:image/svg+xml,%3Csvg viewBox=%220 0 200 200%22 xmlns=%22http://www.w3.org/2000/svg%22%3E%3Cfilter id=%22noiseFilter%22%3E%3CfeTurbulence type=%22fractalNoise%22 baseFrequency=%220.85%22 numOctaves=%223%22 stitchTiles=%22stitch%22/%3E%3C/filter%3E%3Crect width=%22100%25%22 height=%22100%25%22 filter=%22url(%23noiseFilter)%22 opacity=%220.04%22/%3E%3C/svg%3E')",
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      body {
-        background-color: #f4f1ea;
-        color: #4a4a4a;
-        font-family: 'Fredoka', sans-serif;
-      }
-      .font-hand {
-        font-family: 'Patrick Hand', cursive;
-      }
-      .bg-noise {
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.85' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.04'/%3E%3C/svg%3E");
-      }
-      /* Custom scrollbar */
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: transparent; 
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #dcd0c0; 
-        border-radius: 10px;
-      }
-      .animate-bounce-subtle {
-        animation: bounce-subtle 2s infinite;
-      }
-      @keyframes bounce-subtle {
-        0%, 100% { transform: translateY(0); }
-        50% { transform: translateY(-5px); }
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
-  }
-}
-</script>
-</head>
+  </head>
   <body class="bg-noise min-h-screen">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
